[gd_scene load_steps=4 format=2]

[ext_resource path="res://collectibles/collectible.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 20.0

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Collectible" type="Area2D"]
monitorable = false
collision_layer = 2
collision_mask = 0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )

[node name="Sfx" type="AudioStreamPlayer" parent="."]
bus = "Sfx"

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0, 768 )
rect = Rect2( -32, -32, 64, 64 )

[node name="Tween" type="Tween" parent="."]

[connection signal="area_entered" from="." to="." method="_on_Collectible_area_entered"]
[connection signal="finished" from="Sfx" to="." method="_on_Sfx_finished"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
